# pythonKitchen

./: README.md  __init__.py  pyproject.toml  pyproject.toml.bak  pyproject.toml.bak.poetry2uv  pyproject.uv.toml  setupEnv.py
data/: combined_data.csv  fuzzy_matched_titles.csv  mismatches.csv  netflix_cache.pkl  netflix_combined.csv
pythonkitchen/: __init__.py
pythonkitchen/dataPlotKit/: Seaborn_intro.ipynb  __init__.py  netflix.py  testmerge.py
pythonkitchen/dataPlotKit/notebook/: netflix.ipynb
pythonkitchen/hdriRen/: file_rename.csv  file_rename.xlsx  gen_csv.py  gen_json.py  gen_json2.py  get_res.py  hdri.json  movehdri.py  namingcodes.json  output.csv  ~$file_rename.xlsx
pythonkitchen/textureRen/: README.md  __init__.py  namingcodes.json  textures_renamed.json
pythonkitchen/textureRen/scripts/: add_resol_to_hdri.py  hdri_file_attributes.csv  kitbash_cargo.py  script1.py  script2.py
src/pythonkitchen/: backup_jobs.py  cli.py  create_subset.py  custom_tree.py  deeplizard.py  deeplizard_downloader.py  deeplizard_lessons.csv  dliz_lesson_names.py  download_rebelway.py  extract_course.py  extract_lessons.py  generate_descriptions.py  main.py  ml_vfx.json  notion_blocks.py  prettyPrintJson.py  project_export.py  pypiAvailablity.py  read_csv.py  report_broken_sources.py  resize_pdf.py  seq_renamer.py  split_payload.py  test_course.json  test_imgseg_api.py  test_predict.py  udemyCurriculum.py  yank_releases.py
src/pythonkitchen/bkml/: bmcat.py  bookmarks.html  categories.json  folder_structure.json  folder_structure_with_optional_icons.json  parse_html.py  urlicons.py
src/pythonkitchen/dataPlotKit/: netflix.py  netflix_old.py
src/pythonkitchen/folderTools/: cpfldrstruc.py
src/pythonkitchen/fontforge/: automate_fonts.py
src/pythonkitchen/textureRen/: README.md  hdri.json  textures_renamed_new.json
src/pythonkitchen/textureRen/scripts/: add_resol_to_hdri.py  cleanArnoldNodes.py  script1.py  script2.py
tests/: Intro_to_matplotlib.ipynb  Untitled.ipynb  Untitled1.ipynb  credentials_cache.json  matplotlib_advanced.ipynb  pandas_basics.ipynb  test_incept.py  test_incept_addCourse.py
