[tool.poetry]
name = "pythonKitchen"
version = "0.1.0"
description = "Package description for pythonKitchen"
authors = ["Suhail <suhailece@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pythonkitchen", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11.7"
numpy = "^1.26.4"
notebook = "^7.1.2"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
xattr = "^1.1.0"
seaborn = "^0.13.2"
certifi = "^2024.2.2"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.0"
tqdm = "^4.66.2"
beautifulsoup4 = "^4.12.3"
prefect = {extras = ["github"], version = "^3.1.5"}
incept = "^0.1.4"
notionmanager = "^0.1.2"
oauthmanager = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
