[tool.poetry]
name = "pythonKitchen"
version = "0.1.5"
description = "Package description for pythonKitchen"
authors = ["Suhail <suhailece@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pythonkitchen", from = "src"}]

[tool.poetry.scripts]
pythonkitchen = "pythonkitchen.cli:main"

[tool.poetry.dependencies]
python = "^3.11.7"
prefect = {extras = ["github"], version = "^3.1.5"}
incept = "^0.1.78"           # ^ plus your new patch
oauthmanager = "^0.1.1"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
